Got New Dino sprite sheet working

--- a/Final Project Forgot USB/Final Project Forgot USB/Final Project Forgot USB.csproj
+++ b/Final Project Forgot USB/Final Project Forgot USB/Final Project Forgot USB.csproj
@@ -68,6 +68,9 @@
     <Content Include="Content\DINOOOOOO.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Dinosaur_Trex.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\Exit.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
