--- a/Final Project Forgot USB/Final Project Forgot USB.csproj
+++ b/Final Project Forgot USB/Final Project Forgot USB.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Game1.cs" />
     <Compile Include="GameObject.cs" />
     <Compile Include="MobileObject.cs" />
+    <Compile Include="ParticleSystem.cs" />
     <Compile Include="People_Running_sprite.cs" />
     <Compile Include="PlayerObject.cs" />
     <Compile Include="Program.cs" />
